# Ion-Propulsion

./: .gitignore  Electrostatic  InletMassFlow  KeplerLEOVelocity  Lorentz Sub A  MET Sub B  Planck Constant Geosynch  README.md  Scalar Vector Angles  scalarvectorangles  test_logging  theorem.yml
cpp/: CMakeLists.txt
cpp/include/ion_propulsion/: constants.hpp
cpp/include/ion_propulsion/dynamics/: mission_profiles.hpp
cpp/include/ion_propulsion/optimization/: solvers.hpp
cpp/include/ion_propulsion/propulsion/: thruster.hpp
cpp/src/dynamics/: mission_profiles.cpp
cpp/src/optimization/: solvers.cpp
cpp/src/propulsion/: thruster.cpp
cpp/tests/: test_dynamics.cpp  test_optimization.cpp  test_propulsion.cpp
docs/: KeplerLEO.md  lofal.cpp  lofal_inlet  lofal_inlet.h  lofal_ppu  lofal_ppu.h
include/: KeplerLEO.md  lofal_ppu.cpp
python/: Electrostatic  KeplerLEOVelocity.py  coulombsimple.py  electrostatic.py  inletmassflow.py  keplerleovelocity.py  lorentzsimple.py  planckconstantgeo  pyproject.toml  scalarvectorangles.py
python/KeplerLeo/: GenerateOrbitalElements  KeplerianEccentricAnomaly  KeplerianMeanMotion  OrbitalVelocity  Position  TrueAnomaly  UpdateOrbitalElements
python/keplerleo/: generateorbitalelements.py  keplerianeccentricanomaly.py  keplerianmeanmotion.py  orbitalvelocity.py  position.py  trueanomaly.py  updateorbitalelements.py
python/other/: test2.ipynb
python/src/ion_propulsion/: __init__.py
python/src/ion_propulsion/dynamics/: __init__.py  mission_profiles.py
python/src/ion_propulsion/optimization/: __init__.py  solvers.py
python/src/ion_propulsion/propulsion/: __init__.py  thruster.py
python/tests/: test_dynamics.py  test_optimization.py  test_propulsion.py
(+27 files in other folders)
